[package]
name = "grass-mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.4.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
web-sys = { version = "0.3.65", features = ["Window", "Storage","Navigator"] }
rust-i18n = "2"
