[package]
name = "grass-mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.4.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
web-sys = { version = "0.3.65", features = ["Window", "Storage","Navigator","Position","Geolocation","Coordinates","console", "Document", "Element", "HtmlAnchorElement", "Window"] }
rust-i18n = "2"
wasm-bindgen="0.2.88"
gloo-timers = { version = "0.2.4", features = ["futures"] }
leaflet = "0.3.0"

gloo-events = "0.1"
gloo-utils = "0.1"
js-sys = "0.3"
nav-types = "0.5.2"
eskf = {git="https://github.com/nordmoen/eskf-rs"}
nalgebra = "0.29"
git-version = "0.3.8"
